<?xml version="1.0"?>
<package format="2">
  <name>mm_gazebo_interface</name>
  <version>0.0.1</version>
  <description>
    Provides an interface between controllers desired for use with the real
    robot and Gazebo simulation.
  </description>

  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
